<resources>
    <string name="app_name">FotoGeoPointer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Set GeoPoint</string>

    <string name="point_name">Имя точки</string>
    <string name="point_disc">Описание точки</string>
    <string name="longi_null">0.0</string>
    <string name="lati_null">0.0</string>
    <string name="point_tb_title">Точка</string>
    <string name="logout_dialog_title">Смена пользователя</string>
    <string name="logout_dialog_message">Вы хотите сменить пользователя</string>
    <string name="logout_dialog_button_positive">Да</string>
    <string name="logout_dialog_button_negative">Нет</string>
    <string name="delete_menu">Удалить</string>
    <string name="title_point_new">Новая точка</string>
    <string name="title_point">Точка: </string>
    <string name="list_title">Список точек</string>
</resources>